creating ChangeLog
2002-10-26 David Malcolm

	* xmledit.c

	Ported cut/copy/paste within editor to libxml2
	
2002-10-24 David Malcolm

	*  cong-test-view.c, global.h, tree.c, xmldata.c, xmledit.c

	Ported tree/clipboard ops to libxml2; enhanced test view
	
2002-10-24 David Malcolm

	* Makefile.am, cong-test-view.c

	Added cong-test-view.c

	* cong-document.c

	Ported cong_document_save to libxml2

	* xmldata.c

	Ported xml_outer_span_element to libxml2

	
2002-10-24 David Malcolm

	* global.h, open.c, select.c, tree.c, xmldata.c

	More porting to libxml2; bug fixes of port.
	
2002-10-23 David Malcolm

	* cong-location.c, cursor.c, global.h, popup.c, select.c, xmldata.c

	More porting to libxml2
	
2002-10-21 David Malcolm

	* cong-location.c, dispspec.c, global.h, popup.c, xmldata.c

	Further Flux->libxml2 porting; marking areas with GREP FOR MVC
	
2002-10-21 David Malcolm

	* cong-document.c, global.h, main.c, open.c, xmlview.c

	Enhancements to the tree view
	
2002-10-18 David Malcolm

	* cong-document.c, cong-location.c, cursor.c, dispspec.c, global.h, main.c, open.c, popup.c, position.c, select.c, tree.c, xmldata.c, xmledit.c, xmlview.c

	Porting from Flux to libxml2
	
2002-10-18 David Malcolm

	* cursor.c, dispspec.c, global.h, main.c, position.c, xmledit.c, xmlview.c

	Font cleanup
	
2002-10-17 David Malcolm

	* dispspec.c, global.h, xmlview.c

	Header info merging (in the new look); tree now coloured according to dispspec
	
2002-10-16 David Malcolm

	* dispspec.c, global.h, xmledit.c, xmlview.c
	
	New look, to mimic Joakim's mockup.
	
2002-10-15 David Malcolm

	* cong-document.c, cong-location.c, cursor.c, dispspec.c, global.h, popup.c, position.c, select.c, tree.c, xmldata.c, xmledit.c, xmlview.c

	Converting TTREE* to CongNodePtr where appropriate.
	
2002-10-15 David Malcolm

	* cursor.c, global.h, position.c, select.c, xmledit.c

	New line layout implementation
	
2002-10-10 David Malcolm

	* global.h, xmledit.c

	Minor tidy-ups
	
2002-10-10 David Malcolm
