@@ -1,6 +1,4 @@
 #include <gtk/gtk.h>
-#include <ttree.h>
-#include <xml.h>
 
 #include "global.h"
 
@@ -10,8 +8,6 @@ gint save_document(GtkWidget *w, gpointer data)
 	const char *doc_name;
 	UNUSED_VAR(char *ds_name)
 	UNUSED_VAR(char *p)
-	UNUSED_VAR(TTREE *ds_temp)
-	UNUSED_VAR(TTREE *xml_in)
 
 	doc_name = get_file_name("Save XML as...");
 	if (!doc_name) return(TRUE);
